--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: url(Casaflutuantepraia.jpg);
+  background: url(imagem.jpg);
   font-family: Grandstander;
   background-size: cover;
 
